feature(location-type): Add code field

--- a/Resources/translations/messages.en.yml
+++ b/Resources/translations/messages.en.yml
@@ -78,6 +78,7 @@ webburza:
             label:
                 id: '#ID'
                 name: Name
+                code: Code
                 published: Published?
                 created_at: Created At
                 updated_at: Updated At
