--- a/Resources/translations/messages.hr.yml
+++ b/Resources/translations/messages.hr.yml
@@ -77,6 +77,7 @@ webburza:
             label:
                 id: '#ID'
                 name: Naziv
+                code: Šifra
                 published: Objavljeno?
                 created_at: Datum kreiranja
                 updated_at: Datum ažuriranja
